First commit of page home (Login). Only UI is done

--- a/App/eatndrink/src/manifest.json
+++ b/App/eatndrink/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ionic",
-  "short_name": "Ionic",
+  "name": "Eat 'n' Drink",
+  "short_name": "Eat 'n' Drink",
   "start_url": "index.html",
   "display": "standalone",
   "icons": [{
