--- a/App/eatndrink/package.json
+++ b/App/eatndrink/package.json
@@ -1,47 +1,67 @@
 {
     "name": "eatndrink",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "author": "Mirko Pizii",
     "homepage": "https://www.mirkopizii.com",
     "private": true,
     "scripts": {
         "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
+        "build": "ionic-app-scripts build --dev",
         "lint": "ionic-app-scripts lint",
-        "ionic:build": "ionic-app-scripts build",
+        "ionic:build": "ionic-app-scripts build --dev",
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
-        "@angular/common": "4.1.2",
-        "@angular/compiler": "4.1.2",
-        "@angular/compiler-cli": "4.1.2",
-        "@angular/core": "4.1.2",
-        "@angular/forms": "4.1.2",
-        "@angular/http": "4.1.2",
-        "@angular/platform-browser": "4.1.2",
-        "@angular/platform-browser-dynamic": "4.1.2",
-        "@ionic-native/core": "3.10.2",
-        "@ionic-native/splash-screen": "3.10.2",
-        "@ionic-native/status-bar": "3.10.2",
-        "@ionic/storage": "2.0.1",
+        "@angular/common": "^4.2.5",
+        "@angular/compiler": "^4.2.5",
+        "@angular/compiler-cli": "^4.2.5",
+        "@angular/core": "^4.2.5",
+        "@angular/forms": "^4.2.5",
+        "@angular/http": "^4.2.5",
+        "@angular/platform-browser": "^4.2.5",
+        "@angular/platform-browser-dynamic": "^4.2.5",
+        "@angular/tsc-wrapped": "^4.2.5",
+        "@ionic-native/core": "^3.12.1",
+        "@ionic-native/geolocation": "^3.12.1",
+        "@ionic-native/in-app-browser": "^3.12.1",
+        "@ionic-native/splash-screen": "^3.12.1",
+        "@ionic-native/status-bar": "^3.12.1",
+        "@ionic/cli-plugin-proxy": "^1.3.1",
+        "@ionic/storage": "^2.0.1",
+        "@ngx-translate/core": "^7.0.0",
+        "@ngx-translate/http-loader": "^0.1.0",
+        "@types/google-maps": "^3.2.0",
+        "angularfire2": "^4.0.0-rc.1",
+        "autoprefixer": "^7.1.1",
         "cordova-android": "^6.2.3",
-        "cordova-plugin-console": "^1.0.5",
-        "cordova-plugin-device": "^1.1.4",
+        "cordova-browser": "^4.1.0",
+        "cordova-plugin-browsertab": "^0.2.0",
+        "cordova-plugin-buildinfo": "^1.1.0",
+        "cordova-plugin-compat": "^1.1.0",
+        "cordova-plugin-console": "^1.0.7",
+        "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-geolocation": "^2.4.3",
+        "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-statusbar": "^2.2.2",
-        "cordova-plugin-whitelist": "^1.3.1",
-        "ionic-angular": "3.3.0",
+        "cordova-plugin-statusbar": "^2.2.3",
+        "cordova-plugin-whitelist": "^1.3.2",
+        "cordova-sqlite-storage": "^2.0.4",
+        "cordova-universal-links-plugin": "^1.2.1",
+        "firebase": "^4.1.3",
+        "ionic-angular": "^3.5.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
-        "rxjs": "5.1.1",
+        "promise-polyfill": "6.0.2",
+        "rxjs": "^5.4.1",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.11"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "1.3.7",
-        "@ionic/cli-plugin-cordova": "1.3.0",
-        "@ionic/cli-plugin-ionic-angular": "1.3.0",
-        "typescript": "2.3.3"
+        "@angular/cli": "^1.2.0",
+        "@ionic/app-scripts": "1.3.12",
+        "@ionic/cli-plugin-cordova": "^1.4.0",
+        "@ionic/cli-plugin-ionic-angular": "^1.3.1",
+        "typescript": "2.4.1"
     },
     "description": "Social eating app where people can eat and drink together at home and meet new people.",
     "cordova": {
@@ -51,10 +71,17 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-geolocation": {},
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-buildinfo": {},
+            "cordova-universal-links-plugin": {},
+            "cordova-plugin-browsertab": {}
         },
         "platforms": [
-            "android"
+            "android",
+            "browser"
         ]
     }
 }
